working on media queries

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <span class="heading-primary--main" id="title-primary">Steven||Cheng</span>
         <span class="heading-primary--sub">Full Stack Developer</span>
       </h1>
-      <!-- <a href="#" class="btn btn--white btn--animated">Portfolio</a> -->
+      <!-- <a href="#section-tours" class="btn btn--white btn--animated">Portfolio</a> -->
     </div>
   </header>
 
@@ -63,27 +63,28 @@
     <section class="section-about">
       <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading-secondary">
-          About this Developer
         </h2>
       </div>
 
       <div class="row">
         <div class="col-1-of-2">
           <h3 class="heading-tertiary">
-            You're going to fall in love with
+            -Hello! I'm Steven Cheng, a Full Stack Developer.
           </h3>
           <p class="paragraph">
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            I have the passion to dissect problems using reasoning and critical thinking to solve puzzles. With the love of my passions
+            in Health Care and Web Developing, I’m truly excited for the opportunities waiting ahead of me, and knowing that
+            there will always be something new for me to learn is truly amazing!
           </p>
 
-          <h3 class="heading-tertiary">
+          <!-- <h3 class="heading-tertiary">
             Live adventures like you never have been
           </h3>
           <p class="paragraph">
             "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
+          </p> -->
 
-          <a href="#" class="btn-text">Learn more &rarr;</a>
+          <!-- <a href="#" class="btn-text">Learn more &rarr;</a> -->
         </div>
         <div class="col-1-of-2">
           <div class="composition">
@@ -94,15 +95,15 @@
         </div>
     </section>
     <section class="section-features">
-      <div class="u-center-text u-margin-bottom-big">
+      <div class="u-center-text u-margin-bottom-small">
         <h2 class="heading-secondary">
-          What I Know
+          What I Do
         </h2>
         <div class="row">
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-world"></i>
-              <h3 class="heading-tertiary u-margin-bottom-small">HTML</h3>
+              <h3 class="heading-tertiary u-margin-bottom-small">Front-end</h3>
               <p class="faeture-box__text">
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
               </p>
@@ -111,7 +112,7 @@
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-notebook"></i>
-              <h3 class="heading-tertiary u-margin-bottom-small">Sass</h3>
+              <h3 class="heading-tertiary u-margin-bottom-small">Back-end</h3>
               <p class="faeture-box__text">
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
               </p>
@@ -129,7 +130,7 @@
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-laptop"></i>
-              <h3 class="heading-tertiary u-margin-bottom-8">JavaScript</h3>
+              <h3 class="heading-tertiary u-margin-bottom-small">JavaScript</h3>
               <p class="faeture-box__text">
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
               </p>
@@ -138,7 +139,7 @@
         </div>
     </section>
 
-    <section class="section-tours">
+    <section class="section-tours" id="section-tours">
       <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading-secondary">
           My Recent Work
@@ -160,9 +161,6 @@
               </h4>
               <div class="card__details">
                 <ul>
-                  <li>
-                    <b>TOOLS</b>
-                  </li>
                   <li>Mongo DB</li>
                   <li>Express</li>
                   <li>React JS</li>
@@ -177,8 +175,8 @@
                   <!-- <p class="card__price-only">Something</p> -->
                   <p class="card__price-value">Click Here</p>
                 </div>
-                <a href="http://www.picoprojects.us/" class="btn btn--white">DEMO</a>
-                <a href="https://github.com/WslyStvnChng/PicoProject" class="btn btn--white">CODE</a>
+                <a href="#popup" class="btn btn--white">DEMO</a>
+                <!-- <a href="https://github.com/WslyStvnChng/PicoProject" class="btn btn--white">CODE</a> -->
 
               </div>
             </div>
@@ -196,9 +194,6 @@
               </h4>
               <div class="card__details">
                 <ul>
-                  <li>
-                    <b>TOOLS</b>
-                  </li>
                   <li>JavaScript</li>
                   <li>API/AJAX</li>
                   <li>HTML & CSS 5</li>
@@ -213,8 +208,8 @@
                   <!-- <p class="card__price-only">Something</p> -->
                   <p class="card__price-value">Click Here</p>
                 </div>
-                <a href="https://wslystvnchng.github.io/TrailBlazer-App/" class="btn btn--white">DEMO</a>
-                <a href="https://github.com/WslyStvnChng/TrailBlazer-App" class="btn btn--white">CODE</a>
+                <a href="#popup" class="btn btn--white">DEMO</a>
+                <!-- <a href="https://github.com/WslyStvnChng/TrailBlazer-App" class="btn btn--white">CODE</a> -->
               </div>
             </div>
           </div>
@@ -231,9 +226,6 @@
               </h4>
               <div class="card__details">
                 <ul>
-                  <li>
-                    <b>TOOLS</b>
-                  </li>
                   <li>React JS</li>
                   <li>Express</li>
                   <li>Node JS</li>
@@ -247,7 +239,7 @@
                   <!-- <p class="card__price-only">Something</p> -->
                   <p class="card__price-value">Click Here</p>
                 </div>
-                <a href=" https://immense-ridge-52947.herokuapp.com/" class="btn btn--white">DEMO</a>
+                <a href="#popup" class="btn btn--white">DEMO</a>
                 <a href=" https://github.com/WslyStvnChng/memory-game" class="btn btn--white">CODE</a>
 
               </div>
@@ -356,13 +348,14 @@
     </div>
   </footer>
 
-  <!-- <div class="popup">
+  <div class="popup" id="popup">
     <div class="popup__content">
       <div class="popup__left">
         <img src="assets/images/nat-11.jpeg" alt="" class="popup__img">
         <img src="assets/images/nat-10.jpeg" alt="" class="popup__img">
       </div>
       <div class="popup__right">
+        <a href="#section-tours" class="popup__close">&times;</a>
         <h2 class="heading-secondary u-margin-bottom-medium">Look at me</h2>
         <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms</h3>
         <p class="popup__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
@@ -373,7 +366,7 @@
         <a href="#" class="btn btn--blue">Demo Now</a>
       </div>
     </div>
-  </div> -->
+  </div>
   <!-- 
   <section class="grid-test">
     <div class="row">
