--- a/index.html
+++ b/index.html
@@ -273,13 +273,12 @@
             </figcaption> -->
           </figure>
           <div class="aboutme__text">
-            <h3 class="heading-tertiary u-margin-bottom-small">I enjoy fishing and snowboarding</h3>
+            <h3 class="heading-tertiary u-margin-bottom-small">Hello</h3>
             <p>
               "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."Lorem
               ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
               aliqua."Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-              et dolore magna aliqua."Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-              ut labore et dolore magna aliqua.
+              et dolore magna aliqua..
 
             </p>
           </div>
