package.json adding packages and making a build and development

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <!-- JQuery -->
   <script src="https://code.jquery.com/jquery.js"></script>
   <!-- CSS  -->
-  <link rel="stylesheet" href="./css/icon-font.css">
-  <link rel="stylesheet" type="text/css" href="./assets/css/icon-font.css">
+  <!-- <link rel="stylesheet" href="assets/css/icon-font.css"> -->
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
   <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png"> -->
   <title>Steven Cheng || Portfolio</title>
