--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+
   <!-- JQuery -->
   <script src="https://code.jquery.com/jquery.js"></script>
-  <!-- CSS  -->
+
   <!-- <link rel="stylesheet" href="assets/css/icon-font.css"> -->
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-  <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png"> -->
   <title>Steven Cheng || Portfolio</title>
 </head>
 
@@ -189,7 +191,7 @@
                 &nbsp;
               </div>
               <h4 class="card__heading">
-                <!-- <span class="card__heading-span card__heading-span--2">TrailBlazer</span> -->
+                <span class="card__heading-span card__heading-span--2">TrailBlazer</span>
               </h4>
               <div class="card__details">
                 <ul>
@@ -208,7 +210,7 @@
                   <p class="card__price-value">Click Here</p>
                 </div>
                 <a href="#popup" class="btn btn--white">DEMO</a>
-                <!-- <a href="https://github.com/WslyStvnChng/TrailBlazer-App" class="btn btn--white">CODE</a> -->
+                <a href="https://github.com/WslyStvnChng/TrailBlazer-App" class="btn btn--white">CODE</a>
               </div>
             </div>
           </div>
@@ -229,6 +231,7 @@
                   <li>Express</li>
                   <li>Node JS</li>
                   <li>JavaScript</li>
+                  <li>BootStrap</li>
                 </ul>
               </div>
             </div>
@@ -240,7 +243,6 @@
                 </div>
                 <a href="#popup" class="btn btn--white">DEMO</a>
                 <a href=" https://github.com/WslyStvnChng/memory-game" class="btn btn--white">CODE</a>
-
               </div>
             </div>
           </div>
@@ -252,6 +254,7 @@
     </section>
 
     <section class="section-aboutme">
+      <!-- bg video is the animated video in the back -->
       <div class="bg-video">
         <video class="bg-video__content" autoplay muted loop>
           <source src="assets/images/Evening_breeze.mp4" type="video/mp4">
