--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 
   <header class="header">
     <div class="header__logo-box">
-      <img src="./assets/images/barry.jpg" alt="Logo" class="header__logo">
+      <!-- <img src="./assets/images/barry.jpg" alt="Logo" class="header__logo"> -->
     </div>
     <div class="header__text-box">
       <h1 class="heading-primary">
-        <span class="heading-primary--main" id="title-primary">Steven||Cheng</span>
+        <span class="heading-primary--main" id="title-primary">Steven Cheng</span>
         <span class="heading-primary--sub">Full Stack Developer</span>
       </h1>
       <!-- <a href="#section-tours" class="btn btn--white btn--animated">Portfolio</a> -->
@@ -73,7 +73,7 @@
             Hello!
           </h3>
           <p class="paragraph">
-            I have the passion to dissect problems using reasoning and critical thinking to solve puzzles. With the love of my passions
+            I enjoy disssecting problems and solving puzles by using reasoning and critical thinking. With the love of my passions
             in Health Care and Web Developing, I’m truly excited for the opportunities waiting ahead of me, and knowing that
             there will always be something new for me to learn is truly amazing!
           </p>
@@ -248,6 +248,7 @@
             </div>
           </div>
         </div>
+        
 
         <div class="col-1-of-3">
           <div class="card">
