--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             Hello!
           </h3>
           <p class="paragraph">
-            I enjoy disssecting problems and solving puzles by using reasoning and critical thinking. With the love of my passions
+            I enjoy dissecting problems and solving puzles by using reasoning and critical thinking. With the love of my passions
             in Health Care and Web Developing, I’m truly excited for the opportunities waiting ahead of me, and knowing that
             there will always be something new for me to learn is truly amazing!
           </p>
