--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           My Recent Work
         </h2>
         <p class="section__work">
-          Here are a few recent projects. Want to see more, click the button below!
+          Want more? Click below.
         </p>
       </div>
 
