fixed some issues with binary files

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-
-  <div class="navigation">
+  <!--  -->
+  <!-- <div class="navigation">
     <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
 
     <label for="navi-toggle" class="navigation__button">
@@ -45,12 +45,13 @@
         </li>
       </ul>
     </nav>
-  </div>
+  </div> -->
 
+  <!-- Header -->
   <header class="header">
     <div class="header__logo-box">
-      <!-- <img src="./assets/images/barry.jpg" alt="Logo" class="header__logo"> -->
     </div>
+    <!-- Heading -->
     <div class="header__text-box">
       <h1 class="heading-primary">
         <span class="heading-primary--main" id="title-primary">Steven Cheng</span>
@@ -61,6 +62,7 @@
   </header>
 
   <main>
+    <!-- Section about me -->
     <section class="section-about" id="section-about">
       <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading-secondary">
@@ -73,8 +75,8 @@
             Hello!
           </h3>
           <p class="paragraph">
-            I enjoy dissecting problems and solving puzles by using reasoning and critical thinking. With the love of my passions
-            in Health Care and Web Developing, I’m truly excited for the opportunities waiting ahead of me, and knowing that
+            I enjoy dissecting problems and solving puzzles by using reasoning and critical thinking. With the love of my passions in
+            Health Care and Web Developing, I’m truly excited for the opportunities waiting ahead of me, and knowing that
             there will always be something new for me to learn is truly amazing!
           </p>
 
@@ -87,6 +89,7 @@
 
           <!-- <a href="#" class="btn-text">Learn more &rarr;</a> -->
         </div>
+        <!-- Images of things I like -->
         <div class="col-1-of-2">
           <div class="composition">
             <img src="assets/images/nat-5.jpeg" alt="Photo 1" class="composition__photo composition__photo--p1">
@@ -95,6 +98,8 @@
           </div>
         </div>
     </section>
+
+    <!-- Section about the languages that I know -->
     <section class="section-features" id="section-features">
       <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading-secondary">
@@ -124,14 +129,14 @@
               <h3 class="heading-tertiary u-margin-bottom-small">Back-end</h3>
               <p class="faeture-box__text">
                 <div class="card__details">
-                <ul>
-                  <li>Mongo DB</li>
-                  <li>Express</li>
-                  <li>Node JS</li>
-                  <li>MySQL &nbsp;</li>
-                  <li>Sequelize</li>
-                </ul>
-              </div>
+                  <ul>
+                    <li>Mongo DB</li>
+                    <li>Express</li>
+                    <li>Node JS</li>
+                    <li>MySQL &nbsp;</li>
+                    <li>Sequelize</li>
+                  </ul>
+                </div>
               </p>
             </div>
           </div>
@@ -141,34 +146,17 @@
               <h3 class="heading-tertiary u-margin-bottom-small">Framework</h3>
               <p class="faeture-box__text">
                 <div class="card__details">
-                <ul>
-                  <li>BootStrap</li>
-                  <li>Materialize</li>
-                  <li>Rsponsive Grid System</li>
-                  <li>Flexbox</li>
-                  <li></li>
-                </ul>
-              </div>
+                  <ul>
+                    <li>BootStrap</li>
+                    <li>Materialize</li>
+                    <li>Rsponsive Grid System</li>
+                    <li>Flexbox</li>
+                    <li></li>
+                  </ul>
+                </div>
               </p>
             </div>
           </div>
-          <!-- <div class="col-1-of-4">
-            <div class="feature-box">
-              <i class="feature-box__icon icon-basic-laptop"></i>
-              <h3 class="heading-tertiary u-margin-bottom-small">Software</h3>
-              <p class="faeture-box__text">
-                <div class="card__details">
-                <ul>
-                  <li>Meditech</li>
-                  <li>Kronos</li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                </ul>
-              </div>
-              </p>
-            </div>
-          </div> -->
         </div>
     </section>
 
@@ -177,9 +165,9 @@
         <h2 class="heading-secondary">
           My Recent Work
         </h2>
-        <p class="section__work">
+        <!-- <p class="section__work">
           Want more? Click below.
-        </p>
+        </p> -->
       </div>
 
       <div class="row">
@@ -194,11 +182,11 @@
               </h4>
               <div class="card__details">
                 <ul>
-                  <li>Mongo DB</li>
-                  <li>Express</li>
-                  <li>React JS</li>
-                  <li>Node JS</li>
-                  <li>Materialize Framework</li>
+                  <li>Foster/Adoption Application built to solve the issues of dogs getting lost in the adoption process.Pico
+                    Project was realized by a beautiful doggie named Tucker, who had fallen through the cracks. Tucker and
+                    his 82 animal brothers and sisters were rescued from an animal hoarding situation.
+                  </li>
+
                 </ul>
               </div>
             </div>
@@ -227,11 +215,9 @@
               </h4>
               <div class="card__details">
                 <ul>
-                  <li>JavaScript</li>
-                  <li>API/AJAX</li>
-                  <li>HTML & CSS 5</li>
-                  <li>Google Firebase</li>
-                  <li>Materialize Framework</li>
+                  <li>A trail finder app that shows trails based on limited search criteria, whereby users can select a trail
+                    that matches their desired area, length, difficulty level, etc. We created this application to inspire
+                    our community of fellow outdoor enthusiasts who love an adventure.</li>
                 </ul>
               </div>
             </div>
@@ -248,7 +234,7 @@
             </div>
           </div>
         </div>
-        
+
 
         <div class="col-1-of-3">
           <div class="card">
@@ -261,11 +247,10 @@
               </h4>
               <div class="card__details">
                 <ul>
-                  <li>React JS</li>
-                  <li>Express</li>
-                  <li>Node JS</li>
-                  <li>JavaScript</li>
-                  <li>BootStrap</li>
+                  <li>The application renders different images to the screen. Each image listens for click events. The application
+                    tracks the user's score. The user's score is incremented when clicking an image for the first time. The
+                    user's score is reset to 0 if they click the same image more than once.</li>
+
                 </ul>
               </div>
             </div>
@@ -312,10 +297,10 @@
           <div class="aboutme__text" id="aboutme">
             <h3 class="heading-tertiary u-margin-bottom-small">About</h3>
             <p>
-               I am a Full Stack Developer and Certified Nurse Aide based in Denver, Colorado. Recently graduated from University of Denver’s
-              Full Stack Web Development Program, where I am looking to pursue a career that combines my deep understanding of health care
-              technology with hands-on application of my web development skills. I have a Bachelors of Science in Biochemistry from University
-              of Colorado Denver.
+              I am a Full Stack Developer and Certified Nurse Aide based in Denver, Colorado. Recently graduated from University of Denver’s
+              Full Stack Web Development Program, where I am looking to pursue a career that combines my deep understanding
+              of health care technology with hands-on application of my web development skills. I have a Bachelors of Science
+              in Biochemistry from University of Colorado Denver.
             </p>
           </div>
         </div>
@@ -359,13 +344,10 @@
         <div class="footer__navigation">
           <ul class="footer__list">
             <li class="footer__item">
-              <a href="https://www.linkedin.com/in/stvnchng/" class="footer__link">LinkedIn</a>
+              <a href="https://www.linkedin.com/in/stvnchng/" class="footer__link" target="_blank">LinkedIn</a>
             </li>
             <li class="footer__item">
-              <a href="https://github.com/WslyStvnChng" class="footer__link">Github</a>
-            </li>
-            <li class="footer__item">
-              <a href="https://www.instagram.com/cousinhoey/" class="footer__link">Instagram</a>
+              <a href="https://github.com/WslyStvnChng" class="footer__link" target="_blank">Github</a>
             </li>
           </ul>
         </div>
